# ModListInstaller

./: .gitignore  README.md
InstallerApp/: .gitignore  CMakeLists.txt  README.md  xmake.lua
InstallerApp/docs/: architecture.md
InstallerApp/examples/: example-manifest.json
InstallerApp/resources/: app.manifest  app.rc  resource.h
InstallerApp/scripts/: build-release.ps1  restore-webview2.ps1
InstallerApp/src/: CMakeLists.txt
InstallerApp/src/app/: PackageDiscovery.cpp  PackageDiscovery.h  main.cpp
InstallerApp/src/common/: Result.h
InstallerApp/src/downloader/: ITorrentDownloader.h  LibtorrentDownloader.cpp  LibtorrentDownloader.h
InstallerApp/src/extractor/: SevenZipExtractor.cpp  SevenZipExtractor.h
InstallerApp/src/logging/: Logger.cpp  Logger.h
InstallerApp/src/manifest/: Json.cpp  Json.h  Manifest.cpp  Manifest.h
InstallerApp/src/paths/: PathValidator.cpp  PathValidator.h
InstallerApp/src/tracker/: TrackerProvider.cpp  TrackerProvider.h
InstallerApp/src/ui/: WebViewHost.cpp  WebViewHost.h  WinInstallerApp.cpp
InstallerApp/src/verifier/: Sha256.cpp  Sha256.h  Verifier.cpp  Verifier.h
InstallerApp/tests/: CMakeLists.txt  test_main.cpp
InstallerApp/ui/: style.css
PackerApp/: README.md  xmake.lua
PackerApp/resources/: app.rc  resource.h
PackerApp/scripts/: build-release.ps1
PackerApp/src/: main.cpp
Release/: SHA256SUMS.txt
